# stock_box

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  app_sidecar.py  pyproject.toml
apps/api/app/: catalog.py  config.py  main.py  schemas.py
apps/api/app/data/: evidence_seed.py
apps/api/app/engines/: events.py  filings.py  forum.py  market.py  narrative.py  news.py  overview.py  peers.py  risk.py  sentiment.py  timeline.py
apps/api/app/providers/: akshare_provider.py  base.py  factory.py  mock_provider.py  models.py  tushare_provider.py
apps/api/app/services/: report_formatter.py  research_orchestrator.py  snapshot_store.py
apps/api/data/: stock_box.db
apps/api/tests/: test_api.py
apps/client/: index.html  package.json
apps/client/src/: App.tsx  styles.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  desktop-delivery.md  roadmap.md
scripts/: build-api-sidecar.mjs  build-desktop-windows.mjs  build-desktop.mjs  desktop-doctor.mjs  dev-desktop.mjs
