[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-box-api"
version = "0.1.0"
description = "A-share research agent API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.35",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pytest>=8.3.0,<9.0.0",
  "tushare>=1.4.25",
  "uvicorn>=0.34.0,<1.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
