[package]
name = "stock-box-desktop"
version = "0.1.0"
description = "Stock Box desktop shell"
authors = ["Stock Box"]
edition = "2021"

[lib]
name = "stock_box_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
